--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,5 @@
-# Core Framework
 streamlit>=1.28.0
-
-# Data Processing
-pandas>=2.0.0
 numpy>=1.24.0
-
-# Visualization
 matplotlib>=3.7.0
-
-# Optional: For better performance
-pillow>=10.0.0
-
-# Optional: For PDF export (if implementing)
-# reportlab>=4.0.0
-
-# Optional: For Excel export (if implementing)
-# openpyxl>=3.1.0
-# xlsxwriter>=3.1.0
+pandas>=2.0.0
+reportlab>=4.0.0
